--- a/css/styles.css
+++ b/css/styles.css
@@ -90,16 +90,21 @@ body{
 .hub-text{
     margin-top: 250px;
 }
+.hub-image{
+    padding-top: 60px;
+}
 .hub-h2{
     max-width: 350px;
     font-size: 50px;
-    font-weight: 300;
+    font-weight: 500;
+    font-family: cabin;
 
 }
 .hub-para{
+    line-height: 30px;
     color: rgb(70, 69, 69);
     max-width: 400px;
-    margin: 20px 0px;
+    margin: 40px 0px;
     font-family: Open sans;
 }
 .hub-section{
@@ -120,3 +125,33 @@ body{
 .hub-learn{
     color: #62CEF5;
 }
+.task{
+    width: 100vw;
+   margin-top: 100px;
+}
+.container.task{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 50px;
+}
+ 
+.task-text{
+    margin-left: 200px;
+}
+.task-text-h2{
+    max-width: 400px;
+    font-size: 50px;
+    font-weight: 400;
+    font-family: cabin;
+}
+.task-para-1{
+    line-height: 30px;
+    font-family: Open sans;
+    margin: 30px 0px 50px 0px;
+    color: rgb(70, 69, 69);
+}
+.task-anger{
+    color: #62CEF5;
+}
+
