--- a/css/styles.css
+++ b/css/styles.css
@@ -205,3 +205,59 @@ body{
 .schedule-calender{
     position: absolute;  
 }
+/* review section */
+.card-header{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.cards{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.card-profile{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.card-title{
+    margin-bottom: 100px;
+    font-size: 50px;
+    font-weight: 300;
+    font-family: cabin;
+}
+.card-para{
+    margin: 30px 0px;
+    max-width: 200px;
+   line-height: 25px;
+   font-weight: 200;
+   font-family: Open sans;
+}
+.profile-img{
+    overflow: hidden;
+    height: 50px;
+    width: 100px;
+    margin: 20px 0px;
+}
+.profile-title{
+    display: flex;
+    flex-direction: column;
+    font-family: cabin;
+}
+.card-1{
+    border: 1px solid black;
+    padding: 30px;
+    margin-left: 15px;
+    border: none;
+    background-color: white;
+    margin-bottom: 110px;
+}
+.title-3{
+    margin-bottom: 10px;
+}
+.card-img{
+  width: 50%;
+  height: 70%;
+  border-radius: 50%;
+}
