--- a/css/styles.css
+++ b/css/styles.css
@@ -220,8 +220,12 @@ body{
 .schedule-anger{
     color: #62CEF5;
 }
-.schedule-calender{
-    position: absolute;  
+.schedule-img{
+    position: relative;
+}
+.schedule-main-div{
+    position: absolute;
+    top: 0;
 }
 /* review section */
 .card-header{
@@ -280,6 +284,7 @@ body{
   height: 70%;
   border-radius: 50%;
 }
+
 .container.footer{
     background-color: #26313c;
     display: flex;
