--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,9 @@ body{
     border: none;
    background-color: rgba(255, 255, 255, 0.4);
 }
+.title-3{
+    margin-top: 10px;
+}
 .team-icon{
     color: white;
     font-size: 50px;
@@ -228,6 +231,9 @@ body{
     top: 0;
 }
 /* review section */
+.container.review{
+   padding: 40px 0px 40px 150px;
+}
 .card-header{
     text-align: center;
     margin-bottom: 40px;
@@ -258,9 +264,10 @@ body{
 }
 .profile-img{
     overflow: hidden;
-    height: 50px;
-    width: 100px;
-    margin: 20px 0px;
+     height: 50px;
+     width: 50px;
+     margin-right: 10px;
+    margin-top: 10px;
 }
 .profile-title{
     display: flex;
@@ -274,17 +281,17 @@ body{
     border: none;
     border-radius: 6px;
     background-color: white;
-    margin-bottom: 110px;
+    margin-bottom: 40px;
 }
-.title-3{
-    margin-bottom: 10px;
+.profile-para{
+    width: 200px;
 }
 .card-img{
-  width: 50%;
-  height: 70%;
-  border-radius: 50%;
+  width: 90%;
+  height: 100%;
+  border-radius: 70%;
 }
-
+/* footer */
 .container.footer{
     background-color: #26313c;
     display: flex;
